2010-08-12  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #15383: [Unit tests] Uncomment three tests which fail for php 5.3.0 on windows (Thanks to Steffen Kamper)

2010-08-12 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15029: Testcase for t3lib_div::isFirstPartOfStr is missing. (Thanks to Nikolas Hagestein)

2010-08-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15396: [scheduler] Wrong query - crashes with DBAL

2010-08-11  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15375: showDomainNameWithTitle doesn't respect hidden records (Thanks to Henrik Ziegenhain)
	* Fixed bug #15428: Element-Browser page tree has HTML / JS Errors (Thanks to Sven Juergens)

2010-08-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15393: [Caching framework] API usage: Make sure lifetime is NULL or integer
	* Fixed bug #15417: [Caching framework] DbBackend has() returns false for entries with unlimited lifetime

2010-08-11  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15338: sys_action: Link to edit the sql query action is missing for newly created actions (Thanks to Stefan Galinski)
	* Fixed bug #13802: Hardcoded typo3_src Folder in TestCase tests/t3lib/cache/t3lib_cache_factoryTest.php (Thanks to Stefano Kowalke)

2010-08-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15389: [Caching framework] Hardcoded frontends of core caches
	* Fixed bug #15388: [Caching framework] Remove default settings for cache configuration
	* Fixed bug #15180: [Unit tests] t3lib_iconWorks and t3lib_SpriteManager (Thanks to Fabien Udriot)
	* Fixed bug #15383: [Unit tests] Add tests for t3lib_div::validEmail
	* Fixed bug #15382: [Unit tests] Streamline and refactor t3lib_divTest

2010-08-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15403: Missing icons in workspace modules (swap version) (Thanks to Georg Ringer)

2010-08-09  Christian Kuhn  <lolli@schwarzbu.ch>
